Clarify hero value prop for small teams and privacy-first scope

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
       color: #cbd5e1;
       font-size: 0.98rem;
     }
+    .hero-clarifier {
+      color: #cbd5e1;
+      font-size: 0.95rem;
+      margin: 6px 0 16px;
+    }
     .pill {
       display: inline-flex;
       align-items: center;
@@ -296,16 +301,17 @@
         <button class="btn secondary" id="header-signin">Sign in</button>
         <button class="btn secondary" id="header-signout" style="display:none;">Sign out</button>
       </div>
-      <h1>Carbon reporting, made simple.</h1>
-      <p class="subhead">Calculate your electricity emissions in minutes — no uploads, no accounts, no personal data.</p>
-      <p class="subhead">A self-service, plain-English experience — similar to TurboTax, but built for carbon.</p>
+      <h1>Carbon reporting for small teams — without the complexity</h1>
+      <p class="subhead">Calculate Scope 1 and Scope 2 emissions in minutes using plain-English inputs. No consultants. No spreadsheets. No data lock-in.</p>
+      <p class="hero-clarifier">Built for startups, small businesses, and teams starting their ESG journey.</p>
       <div class="cta-row">
-        <a class="btn primary" href="#calculator">Calculate my carbon footprint</a>
+        <a class="btn primary" href="#calculator">Calculate My Emissions</a>
         <a class="btn secondary" href="#how">See how it works</a>
       </div>
       <div class="meta-line">
-        <span>Privacy-first • No logins • No bill uploads</span>
-        <span>Aligned with GHG Protocol Scope 2 (location-based)</span>
+        <span>Privacy-first · No logins required</span>
+        <span>Aligned with GHG Protocol</span>
+        <span>Scope 1 &amp; Scope 2 focused</span>
       </div>
     </div>
   </header>
