Update hero supporting line for audit-ready positioning

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <button class="btn secondary" id="header-signout" style="display:none;">Sign out</button>
       </div>
       <h1>Carbon reporting for small teams — without the complexity</h1>
-      <p class="subhead">Calculate Scope 1 and Scope 2 emissions in minutes using plain-English inputs. No consultants. No spreadsheets. No data lock-in.</p>
+      <p class="subhead">Built for growing companies that need audit-ready carbon reporting without hiring consultants.</p>
       <p class="hero-clarifier">Built for startups, small businesses, and teams starting their ESG journey.</p>
       <div class="cta-row">
         <a class="btn primary" href="#calculator">Calculate My Emissions</a>
