--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       </div>
       <h1>Carbon reporting for small teams — without the complexity</h1>
       <p class="subhead">Carbon calculations in minutes, plain-English, no consultants/spreadsheets/data lock-in.</p>
-      <p class="hero-clarifier">Built for startups, small businesses, and teams starting their ESG journey.</p>
+      <p class="hero-clarifier">Built for growing companies that need audit-ready carbon reporting.</p>
       <div class="cta-row">
         <a class="btn primary" href="#calculator">Calculate My Emissions</a>
         <a class="btn secondary" href="#how">See how it works</a>
