--- a/records.html
+++ b/records.html
@@ -184,7 +184,7 @@
       <div class="top-row">
         <div class="tag">CarbonWise</div>
         <div style="display:flex;gap:10px;align-items:center;">
-          <a class="btn secondary" href="index.html">Calculator</a>
+          <a class="btn secondary" href="index.html#calculator">Calculator</a>
           <a class="btn primary active" href="records.html" aria-current="page">My Records</a>
           <button class="btn secondary" id="records-signout">Sign out</button>
         </div>
