Switch records filters to separate Country and Region

--- a/records.html
+++ b/records.html
@@ -237,6 +237,13 @@
         </label>
 
         <label>
+          Country
+          <select id="filterCountry">
+            <option value="">All</option>
+          </select>
+        </label>
+
+        <label>
           Region
           <select id="filterRegion">
             <option value="">All</option>
