Add real-world comparison to Carbon Snapshot

--- a/records.html
+++ b/records.html
@@ -217,6 +217,11 @@
           <div class="value" id="recordCount">—</div>
           <div class="unit">months</div>
         </div>
+        <div class="summary-card">
+          <div class="label">Real-world comparison</div>
+          <div class="value" id="summaryCompare">—</div>
+          <div class="unit">car miles equiv.</div>
+        </div>
       </div>
     </section>
     <section class="carbon-reminders">
