--- a/index.html
+++ b/index.html
@@ -23,6 +23,55 @@
       line-height: 1.6;
       -webkit-font-smoothing: antialiased;
     }
+    .app-layout {
+      display: flex;
+      min-height: 100vh;
+      background: var(--bg);
+    }
+    .side-nav {
+      width: 230px;
+      padding: 24px 18px;
+      background: #0b1220;
+      color: #e5e7eb;
+      border-right: 1px solid #111827;
+      position: sticky;
+      top: 0;
+      height: 100vh;
+      box-sizing: border-box;
+    }
+    .nav-header {
+      font-weight: 800;
+      letter-spacing: -0.01em;
+      margin-bottom: 16px;
+    }
+    .nav-items {
+      display: grid;
+      gap: 6px;
+    }
+    .nav-item {
+      display: block;
+      padding: 10px 12px;
+      border-radius: 10px;
+      color: #e5e7eb;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .nav-item:hover:not(.disabled) {
+      background: rgba(255, 255, 255, 0.08);
+    }
+    .nav-item.active {
+      background: rgba(34, 197, 94, 0.18);
+      color: #ffffff;
+      border: 1px solid rgba(34, 197, 94, 0.4);
+    }
+    .nav-item.disabled {
+      opacity: 0.5;
+      cursor: default;
+    }
+    .app-content {
+      flex: 1;
+      min-width: 0;
+    }
     .shell {
       max-width: 1100px;
       margin: 0 auto;
@@ -308,35 +357,47 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="shell">
-      <div class="top-row">
-        <div class="tag">CarbonWise</div>
-        <span id="header-company" class="company-badge" style="display:none;"></span>
-        <a class="btn secondary" id="header-records" href="records.html">My Records</a>
-        <button class="btn secondary" id="header-signin">Sign in</button>
-        <button class="btn secondary" id="header-signout" style="display:none;">Sign out</button>
-      </div>
-      <h1>Carbon reporting for small teams — without the complexity</h1>
-      <p class="subhead">Carbon calculations in minutes, plain-English, no consultants/spreadsheets/data lock-in.</p>
-      <p class="hero-clarifier">Built for growing companies that need audit-ready carbon reporting.</p>
-      <div class="cta-row">
-        <a class="btn primary" href="#calculator">Start Carbon Calculation</a>
-        <a class="btn secondary" href="#how">See how it works</a>
-      </div>
-      <!-- Simple, text-first step guide to set expectations quickly -->
-      <div class="step-indicator">
-        <span>① Enter basics</span> <span>→</span> <span>② We calculate</span> <span>→</span> <span>③ Get clear estimates</span>
-      </div>
-      <div class="trust-strip">
-        <span>Privacy-first · No logins</span>
-        <span>Aligned with GHG Protocol</span>
-        <span>Scope 1 &amp; Scope 2 focused</span>
-      </div>
-    </div>
-  </header>
+  <div class="app-layout">
+    <aside class="side-nav">
+      <div class="nav-header">ESGRise</div>
+      <nav class="nav-items">
+        <a href="dashboard.html" class="nav-item disabled" data-nav="dashboard">Dashboard</a>
+        <a href="records.html" class="nav-item" data-nav="records">My Records</a>
+        <a href="#" class="nav-item disabled" data-nav="insights">Insights</a>
+        <a href="#" class="nav-item disabled" data-nav="export">Export / Reports</a>
+        <a href="#" class="nav-item disabled" data-nav="settings">Settings</a>
+      </nav>
+    </aside>
+    <div class="app-content">
+      <header>
+        <div class="shell">
+          <div class="top-row">
+            <div class="tag">CarbonWise</div>
+            <span id="header-company" class="company-badge" style="display:none;"></span>
+            <a class="btn secondary" id="header-records" href="records.html">My Records</a>
+            <button class="btn secondary" id="header-signin">Sign in</button>
+            <button class="btn secondary" id="header-signout" style="display:none;">Sign out</button>
+          </div>
+          <h1>Carbon reporting for small teams — without the complexity</h1>
+          <p class="subhead">Carbon calculations in minutes, plain-English, no consultants/spreadsheets/data lock-in.</p>
+          <p class="hero-clarifier">Built for growing companies that need audit-ready carbon reporting.</p>
+          <div class="cta-row">
+            <a class="btn primary" href="#calculator">Start Carbon Calculation</a>
+            <a class="btn secondary" href="#how">See how it works</a>
+          </div>
+          <!-- Simple, text-first step guide to set expectations quickly -->
+          <div class="step-indicator">
+            <span>① Enter basics</span> <span>→</span> <span>② We calculate</span> <span>→</span> <span>③ Get clear estimates</span>
+          </div>
+          <div class="trust-strip">
+            <span>Privacy-first · No logins</span>
+            <span>Aligned with GHG Protocol</span>
+            <span>Scope 1 &amp; Scope 2 focused</span>
+          </div>
+        </div>
+      </header>
 
-  <div class="shell">
+      <div class="shell">
     <section id="problem">
       <h2>Carbon reporting is confusing by design.</h2>
       <p>Endless portals, vague emission factors, and compliance jargon make small teams stall. CarbonWise removes the noise so you can move.</p>
@@ -749,6 +810,24 @@
 
   <!-- Slide-out record detail panel -->
   <div id="recordPanel" class="slide-panel hidden" aria-live="polite"></div>
+
+    </div> <!-- end app-content -->
+  </div> <!-- end app-layout -->
+
+  <script>
+    (function setActiveNav() {
+      const path = window.location.pathname;
+      document.querySelectorAll('.nav-item').forEach((link) => {
+        const href = link.getAttribute('href');
+        if (href && path.includes(href)) {
+          link.classList.add('active');
+        }
+      });
+      document.querySelectorAll('.nav-item.disabled').forEach((link) => {
+        link.addEventListener('click', (e) => e.preventDefault());
+      });
+    })();
+  </script>
 
   <script type="module">
     import { EMISSION_FACTORS, GLOBAL_FALLBACK } from './data/emission-factors.js';
