--- a/records.html
+++ b/records.html
@@ -23,6 +23,55 @@
       line-height: 1.6;
       -webkit-font-smoothing: antialiased;
     }
+    .app-layout {
+      display: flex;
+      min-height: 100vh;
+      background: var(--bg);
+    }
+    .side-nav {
+      width: 230px;
+      padding: 24px 18px;
+      background: #0b1220;
+      color: #e5e7eb;
+      border-right: 1px solid #111827;
+      position: sticky;
+      top: 0;
+      height: 100vh;
+      box-sizing: border-box;
+    }
+    .nav-header {
+      font-weight: 800;
+      letter-spacing: -0.01em;
+      margin-bottom: 16px;
+    }
+    .nav-items {
+      display: grid;
+      gap: 6px;
+    }
+    .nav-item {
+      display: block;
+      padding: 10px 12px;
+      border-radius: 10px;
+      color: #e5e7eb;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .nav-item:hover:not(.disabled) {
+      background: rgba(255, 255, 255, 0.08);
+    }
+    .nav-item.active {
+      background: rgba(34, 197, 94, 0.18);
+      color: #ffffff;
+      border: 1px solid rgba(34, 197, 94, 0.4);
+    }
+    .nav-item.disabled {
+      opacity: 0.5;
+      cursor: default;
+    }
+    .app-content {
+      flex: 1;
+      min-width: 0;
+    }
     .shell {
       max-width: 1100px;
       margin: 0 auto;
@@ -179,22 +228,34 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="shell">
-      <div class="top-row">
-        <div class="tag">CarbonWise</div>
-        <div style="display:flex;gap:10px;align-items:center;">
-          <a class="btn secondary" href="index.html#calculator">Calculator</a>
-          <a class="btn primary active" href="records.html" aria-current="page">My Records</a>
-          <button class="btn secondary" id="records-signout">Sign out</button>
+  <div class="app-layout">
+    <aside class="side-nav">
+      <div class="nav-header">ESGRise</div>
+      <nav class="nav-items">
+        <a href="dashboard.html" class="nav-item disabled" data-nav="dashboard">Dashboard</a>
+        <a href="records.html" class="nav-item" data-nav="records">My Records</a>
+        <a href="#" class="nav-item disabled" data-nav="insights">Insights</a>
+        <a href="#" class="nav-item disabled" data-nav="export">Export / Reports</a>
+        <a href="#" class="nav-item disabled" data-nav="settings">Settings</a>
+      </nav>
+    </aside>
+    <div class="app-content">
+      <header>
+        <div class="shell">
+          <div class="top-row">
+            <div class="tag">CarbonWise</div>
+            <div style="display:flex;gap:10px;align-items:center;">
+              <a class="btn secondary" href="index.html#calculator">Calculator</a>
+              <a class="btn primary active" href="records.html" aria-current="page">My Records</a>
+              <button class="btn secondary" id="records-signout">Sign out</button>
+            </div>
+          </div>
+          <h1>My Records</h1>
+          <p class="subhead">Your saved Scope 2 electricity emissions.</p>
         </div>
-      </div>
-      <h1>My Records</h1>
-      <p class="subhead">Your saved Scope 2 electricity emissions.</p>
-    </div>
-  </header>
+      </header>
 
-  <div class="shell">
+      <div class="shell">
     <section class="carbon-summary">
       <h2 style="margin:0;">Carbon Snapshot (YTD)</h2>
       <div class="summary-grid">
@@ -279,6 +340,20 @@
 
   <div id="recordPanel" class="slide-panel hidden" aria-live="polite"></div>
 
+  <script>
+    (function setActiveNav() {
+      const path = window.location.pathname;
+      document.querySelectorAll('.nav-item').forEach((link) => {
+        const href = link.getAttribute('href');
+        if (href && path.includes(href)) {
+          link.classList.add('active');
+        }
+      });
+      document.querySelectorAll('.nav-item.disabled').forEach((link) => {
+        link.addEventListener('click', (e) => e.preventDefault());
+      });
+    })();
+  </script>
   <script type="module" src="./js/records.js"></script>
   <script type="module">
     const recordsTable = document.getElementById('recordsTable');
