Add Export / Reports page with authenticated CSV export

--- a/records.html
+++ b/records.html
@@ -250,7 +250,7 @@
         <a href="dashboard.html" class="nav-item disabled" data-nav="dashboard">Dashboard</a>
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
         <a href="#" class="nav-item disabled" data-nav="insights">Insights</a>
-        <a href="#" class="nav-item disabled" data-nav="export">Export / Reports</a>
+        <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
         <a href="#" class="nav-item disabled" data-nav="settings">Settings</a>
       </nav>
     </aside>
