Clarify scope messaging and filtered records export

--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
         <span>① Enter basics</span> <span>→</span> <span>② We calculate</span> <span>→</span> <span>③ Get clear estimates</span>
       </div>
       <div class="trust-strip">
-        <span>Privacy-first · No logins</span>
+        <span>Privacy-first · Calculate without signing in</span>
         <span>Aligned with GHG Protocol</span>
-        <span>Scope 1 &amp; Scope 2 focused</span>
+        <span>Scope 2 electricity emissions</span>
       </div>
     </div>
   </header>
@@ -472,7 +472,7 @@
           </div>
         </div>
         <div class="notice">
-          No uploads. No accounts. We only use the fields above to calculate a Scope 2 (location-based) estimate with EPA/DEFRA factors. This is informational, not a filing.
+          No uploads. Calculate without an account. Sign in only to save or export. We only use the fields above to calculate a Scope 2 (location-based) estimate with EPA/DEFRA factors. This is informational, not a filing.
         </div>
         <div class="cta-row" style="justify-content:flex-start;">
           <button type="submit" class="btn primary">See my emissions in minutes</button>
@@ -574,7 +574,7 @@
       <h2>Privacy & trust</h2>
       <ul>
         <li>No uploads. We never ask for bills or PDFs.</li>
-        <li>No accounts or logins required to see results.</li>
+        <li>Calculate without an account. Sign in only to save or export.</li>
         <li>No stored personal data. Inputs stay on your device.</li>
         <li>Emission factors from EPA / DEFRA — transparent and explainable.</li>
       </ul>
@@ -589,8 +589,8 @@
           <p class="muted">See trends over time and surface anomalies automatically.</p>
         </div>
         <div>
-          <strong>Scope 1 & 2 coverage</strong>
-          <p class="muted">Measure direct fuel use and electricity emissions — clearly and simply.</p>
+          <strong>Scope 2 today; Scope 1 planned</strong>
+          <p class="muted">Currently focused on Scope 2 electricity emissions. Scope 1 support planned.</p>
         </div>
         <div>
           <strong>Exportable ESG summaries</strong>
@@ -601,7 +601,7 @@
 
     <footer>
       <p>CarbonWise exists to make carbon reporting obvious, private, and fast.</p>
-      <p>Aligned with GHG Protocol Scope 2 (location-based). Factors: EPA / DEFRA.</p>
+      <p>Aligned with the GHG Protocol (Scope 2, location-based). Market-based methods and Scope 1 planned. Factors: EPA / DEFRA.</p>
       <p><a href="mailto:hello@esgrise.com">Contact / feedback</a></p>
     </footer>
   </div>
