--- a/records.html
+++ b/records.html
@@ -142,6 +142,7 @@
     }
     h2 { margin: 0 0 10px; font-size: 1.6rem; letter-spacing: -0.01em; }
     .muted { color: var(--muted); }
+    .metric-note { color: var(--muted); font-size: 0.85rem; margin-top: 4px; }
     .table { width: 100%; border-collapse: collapse; margin-top: 10px; }
     .table th, .table td { padding: 10px; border-bottom: 1px solid #e5e7eb; text-align: left; }
     .table th { font-weight: 700; font-size: 0.95rem; color: var(--muted); }
@@ -183,6 +184,14 @@
     }
     .reminder-list li { margin-bottom: 6px; }
     .reminder-list .placeholder { list-style: none; padding-left: 0; }
+    .records-controls {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      flex-wrap: wrap;
+      margin-bottom: 6px;
+    }
     .records-filters {
       position: sticky;
       top: 0;
@@ -208,6 +217,8 @@
       border: 1px solid #e5e7eb;
       min-width: 140px;
     }
+    .records-actions { display: flex; align-items: center; gap: 8px; }
+    .records-status { color: var(--muted); font-size: 0.9rem; }
     .slide-panel {
       position: fixed;
       top: 0;
@@ -231,7 +242,6 @@
   <div class="app-layout">
     <aside class="side-nav">
       <nav class="nav-items">
-        <a href="dashboard.html" class="nav-item disabled" data-nav="dashboard">Dashboard</a>
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
         <a href="#" class="nav-item disabled" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
@@ -281,6 +291,8 @@
           <div class="label">Real-world comparison</div>
           <div class="value" id="summaryCompare">—</div>
           <div class="unit">car miles equiv.</div>
+          <!-- Clarify this comparison is not a reportable metric -->
+          <div class="metric-note">For intuition only (non-reporting metric)</div>
         </div>
       </div>
     </section>
@@ -292,7 +304,14 @@
       </ul>
     </section>
         <section>
-          <h2 style="margin:0;">Saved records</h2>
+          <div class="records-controls">
+            <h2 style="margin:0;">Saved records</h2>
+            <div class="records-actions">
+              <!-- Export respects the current filters to avoid mismatched downloads -->
+              <button class="btn secondary" id="records-export-csv" type="button">Export CSV</button>
+              <span class="records-status" id="records-export-status"></span>
+            </div>
+          </div>
           <section class="records-filters">
             <label>
               Year
@@ -360,6 +379,8 @@
     const recordsTable = document.getElementById('recordsTable');
     const recordPanel = document.getElementById('recordPanel');
     const signoutBtn = document.getElementById('records-signout');
+    const exportBtn = document.getElementById('records-export-csv');
+    const exportStatus = document.getElementById('records-export-status');
     const SUPABASE_URL = window.SUPABASE_URL || 'https://yyzyyjxmoggrmqsgrlxc.supabase.co';
     const SUPABASE_ANON_KEY = window.SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl5enl5anhtb2dncm1xc2dybHhjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYxMTQ4MzMsImV4cCI6MjA4MTY5MDgzM30.BhnHmz9ADB52B_VcMdzvdyFiPvZFj_Q-jfjRqeAoQM4';
 
@@ -414,6 +435,81 @@
       const current = window.loadRecords ? window.loadRecords() : [];
       const next = current.filter((r) => String(r.id) !== String(id));
       if (window.saveRecords) window.saveRecords(next);
+    };
+
+    const setExportStatus = (msg) => {
+      if (exportStatus) exportStatus.textContent = msg;
+    };
+
+    const toCsv = (records, fallbackCompany = '') => {
+      const disclosure = 'Location-based Scope 2 calculation aligned with the GHG Protocol.';
+      const headers = [
+        'company_name','period','country/region','kwh','scope2_location_based_tco2e','scope2_market_based_tco2e','emission_factor_value','emission_factor_year','emission_factor_source'
+      ];
+      const rows = (records || []).map((r) => {
+        const period = `${r.period_year || r.year}-${String(r.period_month || r.month).padStart(2, '0')}`;
+        const country = `${r.calc_country || ''}${r.calc_region ? ' / ' + r.calc_region : ''}`;
+        return [
+          r.companies?.company_name || fallbackCompany,
+          period,
+          country,
+          r.kwh ?? '',
+          r.location_based_emissions ?? '',
+          r.market_based_emissions ?? '',
+          r.emission_factor_value ?? '',
+          r.emission_factor_year ?? '',
+          r.emission_factor_source ?? ''
+        ];
+      });
+      rows.push(['Disclosure', disclosure]);
+      return [headers, ...rows].map((row) => row.map((v) => `"${String(v ?? '').replace(/"/g, '""')}"`).join(',')).join('\r\n');
+    };
+
+    const downloadCsv = (csv, filename = 'carbonwise_scope2_filtered.csv') => {
+      const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = filename;
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      URL.revokeObjectURL(url);
+    };
+
+    // Export filtered data to keep downloads aligned with on-screen filters
+    const exportFiltered = async () => {
+      if (exportBtn) exportBtn.disabled = true;
+      setExportStatus('Preparing filtered export…');
+      try {
+        if (!window.getFilteredRecords) {
+          setExportStatus('Filters unavailable.');
+          return;
+        }
+        if (supabase) {
+          const { data: sessionData } = await supabase.auth.getSession();
+          if (!sessionData?.session) {
+            window.location.href = 'index.html';
+            return;
+          }
+        }
+        const filtered = window.getFilteredRecords();
+        if (!filtered.length) {
+          setExportStatus('No records match these filters.');
+          return;
+        }
+        const companyName = filtered[0]?.companies?.company_name || '';
+        const yearVal = document.getElementById('filterYear')?.value;
+        const csv = toCsv(filtered, companyName);
+        const namePart = yearVal ? `${yearVal}` : 'filtered';
+        downloadCsv(csv, `carbonwise_scope2_${namePart}.csv`);
+        setExportStatus('Exported with current filters.');
+      } catch (err) {
+        console.warn('Filtered CSV export error', err);
+        setExportStatus('Could not export right now.');
+      } finally {
+        if (exportBtn) exportBtn.disabled = false;
+      }
     };
 
     // Wire slide-out Edit/Delete callbacks
@@ -492,6 +588,11 @@
             try { await supabase.auth.signOut(); } catch (err) { console.warn('Sign out failed', err); }
           }
           window.location.href = 'index.html';
+        });
+      }
+      if (exportBtn) {
+        exportBtn.addEventListener('click', async () => {
+          await exportFiltered();
         });
       }
     };
