--- a/exports.html
+++ b/exports.html
@@ -93,6 +93,9 @@
           </ul>
         </section>
       </div>
+      <footer class="muted" style="text-align:center; padding:16px 0 24px; font-size:0.95rem;">
+        Methodology: <a href="https://esgrise.com/methodology.html">esgrise.com/methodology</a>
+      </footer>
     </div>
   </div>
 
