Tweak methodology link text for readability

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         <li>Calculate without an account. Sign in only to save or export.</li>
         <li>No stored personal data. Inputs stay on your device.</li>
         <li>Emission factors from EPA / DEFRA — transparent and explainable.</li>
-        <li>See our calculation methodology and disclosures at <a href="methodology.html">methodology.html</a>.</li>
+        <li>See our calculation methodology and disclosures at <a href="methodology.html">methodology</a>.</li>
       </ul>
     </section>
 
