--- a/records.html
+++ b/records.html
@@ -236,6 +236,34 @@
     }
     .slide-panel.active { transform: translateX(0); }
     .hidden { display: none; }
+
+    @media (max-width: 980px) {
+      .app-layout { flex-direction: column; }
+      .side-nav {
+        width: 100%;
+        height: auto;
+        position: sticky;
+        top: 0;
+        z-index: 30;
+        border-right: none;
+        border-bottom: 1px solid #111827;
+      }
+      .nav-items { grid-auto-flow: column; grid-auto-columns: minmax(120px, 1fr); }
+      header { padding: 56px 20px 32px; }
+      .top-row { flex-direction: column; align-items: flex-start; gap: 14px; }
+      .top-row > div { flex-wrap: wrap; }
+      .btn { padding: 12px 14px; }
+    }
+
+    @media (max-width: 680px) {
+      .shell { padding: 0 16px 60px; }
+      .nav-items { grid-auto-flow: row; }
+      .records-controls { flex-direction: column; align-items: flex-start; }
+      .records-filters { position: static; padding: 8px 0 12px; }
+      .records-filters label { min-width: 140px; }
+      .records-filters select { width: 100%; min-width: 0; }
+      .table { display: block; overflow-x: auto; -webkit-overflow-scrolling: touch; }
+    }
   </style>
 </head>
 <body>
