--- a/exports.html
+++ b/exports.html
@@ -39,6 +39,31 @@
     .btn.secondary { background: #f8fafc; border: 1px solid #cbd5e1; color: #0f172a; }
     .actions { display: flex; gap: 10px; flex-wrap: wrap; }
     .status { font-size: 0.95rem; color: var(--muted); min-height: 20px; }
+
+    @media (max-width: 980px) {
+      .app-layout { flex-direction: column; }
+      .side-nav {
+        width: 100%;
+        height: auto;
+        position: sticky;
+        top: 0;
+        z-index: 30;
+        border-right: none;
+        border-bottom: 1px solid #111827;
+      }
+      .nav-items { grid-auto-flow: column; grid-auto-columns: minmax(120px, 1fr); }
+      header { padding: 24px 20px 10px; }
+      .top-row { flex-direction: column; align-items: flex-start; gap: 12px; }
+      .btn { padding: 12px 14px; }
+    }
+
+    @media (max-width: 680px) {
+      .shell { padding: 0 16px 50px; }
+      .nav-items { grid-auto-flow: row; }
+      .actions { flex-direction: column; align-items: stretch; }
+      .actions .btn { width: 100%; }
+      .status { min-height: 0; }
+    }
   </style>
 </head>
 <body>
