Simplify hero content

--- a/index.html
+++ b/index.html
@@ -367,20 +367,9 @@
         <button class="btn secondary" id="header-signout" style="display:none;">Sign out</button>
       </div>
       <h1>Carbon reporting for small teams — without the complexity</h1>
-      <p class="subhead">Carbon calculations in minutes, plain-English, no consultants/spreadsheets/data lock-in.</p>
-      <p class="hero-clarifier">Built for growing companies that need audit-ready carbon reporting.</p>
+      <p class="subhead">Calculate Scope 2 emissions in minutes.</p>
       <div class="cta-row">
         <a class="btn primary" href="#calculator">Start Carbon Calculation</a>
-        <a class="btn secondary" href="#how">See how it works</a>
-      </div>
-      <!-- Simple, text-first step guide to set expectations quickly -->
-      <div class="step-indicator">
-        <span>① Enter basics</span> <span>→</span> <span>② We calculate</span> <span>→</span> <span>③ Get clear estimates</span>
-      </div>
-      <div class="trust-strip">
-        <span>Privacy-first · Calculate without signing in</span>
-        <span>Aligned with GHG Protocol</span>
-        <span>Scope 2 electricity emissions</span>
       </div>
     </div>
   </header>
