Compress calculator notice

--- a/index.html
+++ b/index.html
@@ -375,12 +375,6 @@
   </header>
 
   <div class="shell">
-    <section id="problem">
-      <h2>Carbon reporting is confusing by design.</h2>
-      <p>Endless portals, vague emission factors, and compliance jargon make small teams stall. CarbonWise removes the noise so you can move.</p>
-      <p>We ask only what’s necessary, use public factors (EPA/DEFRA), and explain results in plain English.</p>
-    </section>
-
     <section id="how">
       <h2>How CarbonWise works</h2>
       <div class="grid-3">
@@ -461,7 +455,7 @@
           </div>
         </div>
         <div class="notice">
-          No uploads. Calculate without an account. Sign in only to save or export. We only use the fields above to calculate a Scope 2 (location-based) estimate with EPA/DEFRA factors. This is informational, not a filing.
+          No portals, no jargon - just a clear Scope 2 estimate. No uploads. Calculate without an account; sign in only to save or export. Uses public EPA/DEFRA factors. Informational, not a filing.
         </div>
         <div class="cta-row" style="justify-content:flex-start;">
           <button type="submit" class="btn primary">See my emissions in minutes</button>
